--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "next": "latest",
+    "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "swiper": "^6.8.4"
+    "swiper": "^7.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
