--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "swiper": "^7.0.1"
   },
   "devDependencies": {
